syntax = "proto3";

package valid;

import "google/protobuf/descriptor.proto";

option optimize_for = SPEED;

extend google.protobuf.MessageOptions  {
    repeated string message = 51001;
}

extend google.protobuf.FieldOptions  {
    string field = 51001;
    string keys = 51002;
    string values = 51003;
    string enumeration = 51004;
}

message MessageValidation {
    bool invalid = 1;
    repeated FieldValidationErrors fields = 2;
}

message FieldValidationErrors {
    string name = 1;
    repeated FieldValidation errors = 2;
}

message FieldValidation {
    enum Type {
        TYPE = 0;
        REQUIRED = 1;
        HAS_TEXT = 2;

        REQUIRES = 3;
        SIZE = 4;
        RANGE = 5;
        IN = 6;
        NOT_IN = 7;
        REGEX = 8;

        EXACTLY = 9;
        AT_LEAST = 10;
        AT_MOST = 11;
        ALL_OR_NONE = 12;
    }

    Type type = 1;
    repeated string params = 2;
}
